arreglar espacios en roles de sphinx

--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -739,7 +739,7 @@ msgid ""
 "options for the compiler --- macro definitions, include directories,  link "
 "path, libraries and the like."
 msgstr ""
-"Este módulo proporciona la clase base abstracta para las clases :class: "
+"Este módulo proporciona la clase base abstracta para las clases :class:"
 "`CCompiler`. Una instancia de la clase :class:`CCompiler` se puede usar para "
 "todos los pasos de compilación y enlace necesarios para construir un solo "
 "proyecto. Se proporcionan métodos para establecer opciones para el "
@@ -827,11 +827,11 @@ msgstr ""
 "defecto es ``os.name`` (por ejemplo, ``'posix'``, ``'nt'``), y *compiler* "
 "por defecto es el compilador por defecto para esa plataforma. Actualmente "
 "solo se admiten ``'posix'`` y ``'nt'``, y los compiladores predeterminados "
-"son la \"interfaz Unix tradicional\" (: class: clase `UnixCCompiler`) y "
-"Visual C++ (: class: clase` MSVCCompiler`). Tenga en cuenta que es "
-"perfectamente posible solicitar un objeto de compilador de Unix en Windows y "
-"un objeto de compilador de Microsoft en Unix --- si proporciona un valor "
-"para *compiler*, *plat* es ignorado."
+"son la \"interfaz Unix tradicional\" (clase :class:`UnixCCompiler`) y Visual "
+"C++ (clase :class:`MSVCCompiler`). Tenga en cuenta que es perfectamente "
+"posible solicitar un objeto de compilador de Unix en Windows y un objeto de "
+"compilador de Microsoft en Unix --- si proporciona un valor para *compiler*, "
+"*plat* es ignorado."
 
 #: ../Doc/distutils/apiref.rst:382
 msgid ""
@@ -1026,7 +1026,7 @@ msgstr ""
 "está definida por :meth:`define_macro` y la indefinida por :meth:"
 "`undefine_macro`, la última llamada tiene prioridad (incluidas varias "
 "redefiniciones o indefiniciones). Si la macro está redefinida/indefinida por "
-"compilación (es decir, en la llamada a :meth: `compile`), entonces eso tiene "
+"compilación (es decir, en la llamada a :meth:`compile`), entonces eso tiene "
 "prioridad."
 
 #: ../Doc/distutils/apiref.rst:498
@@ -1067,8 +1067,8 @@ msgid ""
 "(a list) to do the job."
 msgstr ""
 "Detecta el idioma de un archivo determinado o una lista de archivos. Utiliza "
-"los atributos de instancia :attr: `language_map` (un diccionario) y :attr:` "
-"language_order` (una lista) para hacer el trabajo."
+"los atributos de instancia :attr:`language_map` (un diccionario) y :attr:"
+"`language_order` (una lista) para hacer el trabajo."
 
 #: ../Doc/distutils/apiref.rst:522
 msgid ""
@@ -1193,7 +1193,7 @@ msgid ""
 "a :file:`.c` file to a :file:`.o` file.)"
 msgstr ""
 "Compila uno o más archivos fuente. Genera archivos de objeto (por ejemplo, "
-"transforma un archivo :archivo:`.c` en un archivo :archivo:`.o`)."
+"transforma un archivo :file:`.c` en un archivo :file:`.o`)."
 
 #: ../Doc/distutils/apiref.rst:588
 msgid ""
@@ -1206,7 +1206,7 @@ msgid ""
 msgstr ""
 "*sources* debe ser una lista de nombres de archivo, probablemente archivos C/"
 "C ++, pero en realidad cualquier cosa que pueda ser manejada por un "
-"compilador particular y un compilador de clase (por ejemplo :class: "
+"compilador particular y un compilador de clase (por ejemplo :class:"
 "`MSVCCompiler` puede manejar archivos de recursos en *source*). Retorna una "
 "lista de nombres de archivos de objetos, uno por nombre de archivo fuente en "
 "*sources*. Dependiendo de la implementación, no se compilarán necesariamente "
@@ -1222,7 +1222,7 @@ msgid ""
 msgstr ""
 "Si se indica el *output_dir*, los objeto de archivos se colocarán debajo de "
 "él, conservando su componente de ruta original. Es decir, :file:`foo/bar.c` "
-"normalmente se compila en :file:` foo/bar.o` (para una implementación de "
+"normalmente se compila en :file:`foo/bar.o` (para una implementación de "
 "Unix); si *output_dir* es *build*, entonces se compilaría en :file:`build/"
 "foo/bar.o`."
 
@@ -1306,8 +1306,8 @@ msgstr ""
 "\"montón de cosas\" o \"*bunch of stuff*\" consiste en la lista de archivos "
 "de objeto suministrados como *objects*, los archivos de objeto adicionales "
 "suministrados a :meth:`add_link_object` y/o :meth:`set_link_objects`, las "
-"bibliotecas suministradas a :meth: `add_library` y/o :meth:` set_libraries`, "
-"y las bibliotecas proporcionadas como *libraries* (si las hay)."
+"bibliotecas suministradas a :meth:`add_library` y/o :meth:`set_libraries`, y "
+"las bibliotecas proporcionadas como *libraries* (si las hay)."
 
 #: ../Doc/distutils/apiref.rst:635
 msgid ""
@@ -1376,10 +1376,10 @@ msgstr ""
 "*libraries* es una lista de bibliotecas para enlazar. Estos son nombres de "
 "bibliotecas, no nombres de archivos, ya que se traducen a nombres de "
 "archivos de una manera específica de la plataforma (por ejemplo, *foo* se "
-"convierte en :file:`libfoo.a` en Unix y :file:` foo.lib` en DOS/Windows). "
-"Sin embargo, pueden incluir un componente de directorio, lo que significa "
-"que el enlazador buscará en ese directorio específico en lugar de buscar en "
-"todas las ubicaciones normales."
+"convierte en :file:`libfoo.a` en Unix y :file:`foo.lib` en DOS/Windows). Sin "
+"embargo, pueden incluir un componente de directorio, lo que significa que el "
+"enlazador buscará en ese directorio específico en lugar de buscar en todas "
+"las ubicaciones normales."
 
 #: ../Doc/distutils/apiref.rst:667
 msgid ""
@@ -1395,7 +1395,7 @@ msgstr ""
 "buscar bibliotecas que se especificaron como nombres de bibliotecas "
 "descubiertos (es decir, sin componentes de directorio). Estos están en la "
 "parte superior del sistema predeterminado y los suministrados a :meth:"
-"`add_library_dir` y/o :meth:` set_library_dirs`. *runtime_library_dirs* es "
+"`add_library_dir` y/o :meth:`set_library_dirs`. *runtime_library_dirs* es "
 "una lista de directorios que se incrustarán en la biblioteca compartida y se "
 "usarán para buscar otras bibliotecas compartidas de las que depende en "
 "tiempo de ejecución. (Esto solo puede ser relevante en Unix)."
@@ -2286,7 +2286,7 @@ msgid ""
 "silently skipped.  *optimize* must be one of the following:"
 msgstr ""
 "*Byte-compile* es una colección de archivos fuente de Python de :file:`.pyc` "
-"en un subdirectorio :file:` __pycache__` (ver :pep:`3147` y :pep:` 488`). "
+"en un subdirectorio :file:`__pycache__` (ver :pep:`3147` y :pep:`488`). "
 "*py_files* es una lista de archivos para compilar; cualquier archivo que no "
 "termine en :file:`.py` se omite silenciosamente. *optimize* debe ser uno de "
 "los siguientes:"
@@ -2551,7 +2551,7 @@ msgid ""
 "called yet."
 msgstr ""
 "Retorna la lista de tuplas ``(*option*, *value*)`` procesadas por la "
-"ejecución anterior de :meth:`getopt` Genera :exc:` RuntimeError` si :meth:"
+"ejecución anterior de :meth:`getopt` Genera :exc:`RuntimeError` si :meth:"
 "`getopt` aún no se ha llamado."
 
 #: ../Doc/distutils/apiref.rst:1394
@@ -3074,7 +3074,7 @@ msgstr ""
 "\" de *Distutils*. Una analogía útil para las clases de comando es pensar en "
 "ellas como subrutinas con variables locales llamadas *options*. Las opciones "
 "se declaran en :meth:`initialize_options` y se definen (dados sus valores "
-"finales) en :meth:` finalize_options`, los cuales deben ser definidos por "
+"finales) en :meth:`finalize_options`, los cuales deben ser definidos por "
 "cada clase de comando. La distinción entre los dos es necesaria porque los "
 "valores de las opciones pueden provenir del mundo exterior (línea de "
 "comando, archivo de configuración, ...), y cualquier opción que dependa de "
