--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-17 21:52-0300\n"
+"PO-Revision-Date: 2020-11-27 01:14-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -440,7 +440,7 @@ msgstr ""
 "con la información de eventos logging es usar la clase :class:"
 "`LoggerAdapter`. Esta clase está diseñada para parecerse a :class:`Logger`, "
 "de modo que pueda llamar :meth:`debug`, :meth:`info`, :meth:`warning`, :meth:"
-"`error`, :meth:`excepción`, :meth`critical` y :meth:`log`. Estos métodos "
+"`error`, :meth:`excepción`, :meth:`critical` y :meth:`log`. Estos métodos "
 "tienen las mismas signaturas que sus contrapartes en :class:`Logger`, por lo "
 "que puede usar los dos tipos de instancias indistintamente."
 
@@ -547,12 +547,12 @@ msgid ""
 "can then be output using a suitable format string, or if needed a custom :"
 "class:`Formatter`."
 msgstr ""
-"También puedes agregar información contextual a la salida del log "
-"utilizando un :class:`Filter` definido por el usuario. Las instancias de "
-"``Filter`` pueden modificar los ``LogRecords`` que se les pasan, incluido el "
-"agregado de atributos adicionales que luego se pueden generar utilizando "
-"cadena de caracteres con el formato adecuado, o si es necesario, un :class:"
-"`Formatter` personalizado."
+"También puedes agregar información contextual a la salida del log utilizando "
+"un :class:`Filter` definido por el usuario. Las instancias de ``Filter`` "
+"pueden modificar los ``LogRecords`` que se les pasan, incluido el agregado "
+"de atributos adicionales que luego se pueden generar utilizando cadena de "
+"caracteres con el formato adecuado, o si es necesario, un :class:`Formatter` "
+"personalizado."
 
 #: ../Doc/howto/logging-cookbook.rst:642
 msgid ""
@@ -601,9 +601,9 @@ msgid ""
 "you to adapt in your own applications."
 msgstr ""
 "Aunque logging es seguro para hilos, y el logging a un solo archivo desde "
-"múltiples hilos en un solo proceso *es* compatible, el logging en un "
-"solo archivo desde *múltiples procesos* *no* es compatible, porque no existe "
-"una forma estándar de serializar el acceso a un solo archivo en múltiples "
+"múltiples hilos en un solo proceso *es* compatible, el logging en un solo "
+"archivo desde *múltiples procesos* *no* es compatible, porque no existe una "
+"forma estándar de serializar el acceso a un solo archivo en múltiples "
 "procesos en Python. Si necesita hacer esto último, una forma de abordarlo es "
 "hacer que todos los procesos se registren en una :class:`~handlers."
 "SocketHandler`, y tener un proceso separado que implemente un servidor de "
