--- a/distutils/uploading.po
+++ b/distutils/uploading.po
@@ -6,26 +6,30 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-11-27 23:27-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/distutils/uploading.rst:5
 msgid "Uploading Packages to the Package Index"
-msgstr ""
+msgstr "Subir paquetes al índice de paquetes"
 
 #: ../Doc/distutils/uploading.rst:7
 msgid ""
-"References to up to date PyPI documentation can be found at :ref:`publishing-"
-"python-packages`."
+"References to up to date PyPI documentation can be found at :ref:"
+"`publishing-python-packages`."
 msgstr ""
+"Referencias a la documentación actualizada de PyPI pueden "
+"encontrarse en :ref:`publishing-python-packages`."
