--- a/whatsnew/3.0.po
+++ b/whatsnew/3.0.po
@@ -995,7 +995,7 @@ msgid ""
 "builtin :func:`memoryview` provides (mostly) similar functionality."
 msgstr ""
 ":ref:`pep-3118`. El antiguo :func:`buffer` incorporado ahora realmente se ha "
-"eliminado; el :func:'memoryview' incorporado nuevo proporciona (mayormente) "
+"eliminado; el :func:`memoryview' incorporado nuevo proporciona (mayormente) "
 "una funcionalidad similar."
 
 #: ../Doc/whatsnew/3.0.rst:535
@@ -1691,7 +1691,7 @@ msgid ""
 "Removed the :class:`file` type.  Use :func:`open`.  There are now several "
 "different kinds of streams that open can return in the :mod:`io` module."
 msgstr ""
-"Se eliminó el tipo :class:`file`. Se utiliza :func:`open. Ahora hay varios "
+"Se eliminó el tipo :class:`file`. Se utiliza :func:`open`. Ahora hay varios "
 "tipos diferentes de secuencias que se abren y pueden retornar en el módulo :"
 "mod:`io`."
 
