Apply suggestions from code review

--- a/whatsnew/3.0.po
+++ b/whatsnew/3.0.po
@@ -995,7 +995,7 @@ msgid ""
 "builtin :func:`memoryview` provides (mostly) similar functionality."
 msgstr ""
 ":ref:`pep-3118`. El antiguo :func:`buffer` incorporado ahora realmente se ha "
-"eliminado; el :func:`memoryview' incorporado nuevo proporciona (mayormente) "
+"eliminado; el :func:`memoryview` incorporado nuevo proporciona (mayormente) "
 "una funcionalidad similar."
 
 #: ../Doc/whatsnew/3.0.rst:535
