Nuevas características (1 de 2)

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2020-10-30 00:06-0600\n"
+"PO-Revision-Date: 2020-12-05 10:28-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
+"Last-Translator: José Luis Salgado Banda\n"
 "Language: es_MX\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/3.5.rst:3
 msgid "What's New In Python 3.5"
@@ -81,7 +81,8 @@ msgstr "Nuevos módulos:"
 
 #: ../Doc/whatsnew/3.5.rst:69
 msgid ":mod:`typing`: :ref:`PEP 484 -- Type Hints <whatsnew-pep-484>`."
-msgstr ":mod:`typing`: :ref:`PEP 484 -- Type Hints <whatsnew-pep-484>`."
+msgstr ""
+":mod:`typing`: :ref:`PEP 484 -- Indicador de tipos <whatsnew-pep-484>`."
 
 #: ../Doc/whatsnew/3.5.rst:70
 msgid ""
@@ -279,17 +280,17 @@ msgid ""
 "many other smaller improvements, CPython optimizations, deprecations, and "
 "potential porting issues."
 msgstr ""
-"Por favor siga leyendo para obtener una lista completa de los cambios que se "
-"enfrentan los usuarios, incluidas muchas otras mejoras menores, "
+"Por favor sigue leyendo para obtener una lista completa de los cambios que "
+"se enfrentan los usuarios, incluidas muchas otras mejoras menores, "
 "optimizaciones de CPython, deprecations y posibles problemas de portabilidad."
 
 #: ../Doc/whatsnew/3.5.rst:163
 msgid "New Features"
-msgstr ""
+msgstr "Nuevas características"
 
 #: ../Doc/whatsnew/3.5.rst:168
 msgid "PEP 492 - Coroutines with async and await syntax"
-msgstr ""
+msgstr "PEP 492 - Corrutinas con sintaxis async y await"
 
 #: ../Doc/whatsnew/3.5.rst:170
 msgid ""
@@ -299,11 +300,18 @@ msgid ""
 "iterable>`, and :term:`asynchronous context managers <asynchronous context "
 "manager>`."
 msgstr ""
+":pep:`492` mejora enormemente el soporte para la programación asíncrona en "
+"Python al agregar :term:`objetos aguardables <awaitable>`, :term:`funciones "
+"corrutina <coroutine function>`, :term:`iteración asincrónica <asynchronous "
+"iterable>`, y :term:`gestores asincrónicos de contexto <asynchronous context "
+"manager>`."
 
 #: ../Doc/whatsnew/3.5.rst:176
 msgid ""
 "Coroutine functions are declared using the new :keyword:`async def` syntax::"
 msgstr ""
+"Las funciones corrutina son declaradas usando la nueva sintaxis :keyword:"
+"`async def`::"
 
 #: ../Doc/whatsnew/3.5.rst:181
 msgid ""
@@ -312,38 +320,53 @@ msgid ""
 "can be *awaited*, as long as it implements the :term:`awaitable` protocol by "
 "defining the :meth:`__await__` method."
 msgstr ""
+"Dentro de una función corrutina, la nueva expresión :keyword:`await` puede "
+"ser usada para suspender la ejecución de la corrutina hasta que el resultado "
+"esté disponible. Cualquier objeto puede ser *awaited*, siempre que "
+"implemente el protocolo :term:`awaitable` al definir el método :meth:"
+"`__await__`."
 
 #: ../Doc/whatsnew/3.5.rst:186
 msgid ""
 "PEP 492 also adds :keyword:`async for` statement for convenient iteration "
 "over asynchronous iterables."
 msgstr ""
+"PEP 492 también agrega la declaración :keyword:`async for` para una "
+"iteración conveniente sobre iterables asincrónicas."
 
 #: ../Doc/whatsnew/3.5.rst:189
 msgid "An example of a rudimentary HTTP client written using the new syntax::"
 msgstr ""
+"Un ejemplo de un cliente rudimentario HTTP escrito con la nueva sintaxis::"
 
 #: ../Doc/whatsnew/3.5.rst:215
 msgid ""
 "Similarly to asynchronous iteration, there is a new syntax for asynchronous "
 "context managers.  The following script::"
 msgstr ""
+"De manera similar a la iteración asincrónica, hay una nueva sintaxis para "
+"los gestores asincrónicos de contexto. El siguiente script::"
 
 #: ../Doc/whatsnew/3.5.rst:235
 msgid "will output::"
-msgstr ""
+msgstr "saldrá::"
 
 #: ../Doc/whatsnew/3.5.rst:244
 msgid ""
 "Note that both :keyword:`async for` and :keyword:`async with` can only be "
 "used inside a coroutine function declared with :keyword:`async def`."
 msgstr ""
+"Ten en cuenta que tanto :keyword:`async for` como :keyword:`async with` "
+"solamente pueden ser utilizadas dentro de una función corrutina declarada "
+"con :keyword:`async def`."
 
 #: ../Doc/whatsnew/3.5.rst:247
 msgid ""
 "Coroutine functions are intended to be run inside a compatible event loop, "
 "such as the :ref:`asyncio loop <asyncio-event-loop>`."
 msgstr ""
+"Las funciones corrutina están destinadas para ser ejecutadas dentro de un "
+"bucle de eventos compatible, como :ref:`asyncio loop <asyncio-event-loop>`."
 
 #: ../Doc/whatsnew/3.5.rst:253
 msgid ""
@@ -351,22 +374,28 @@ msgid ""
 "`asynchronous iterators <asynchronous iterator>`.  Returning an :term:"
 "`awaitable` object will result in a :exc:`PendingDeprecationWarning`."
 msgstr ""
+"A partir de CPython 3.5.2, ``__aiter__`` puede retornar directamente :term:"
+"`iteradores asincrónicos <asynchronous iterator>`. Retornar un objeto :term:"
+"`awaitable` resultará en :exc:`PendingDeprecationWarning`."
 
 #: ../Doc/whatsnew/3.5.rst:259
 msgid "See more details in the :ref:`async-iterators` documentation section."
 msgstr ""
+"Consultar más detalles en la sección de la documentación :ref:`async-"
+"iterators`."
 
 #: ../Doc/whatsnew/3.5.rst:265
 msgid ":pep:`492` -- Coroutines with async and await syntax"
-msgstr ""
+msgstr ":pep:`492` -- Corrutinas con sintaxis async y await"
 
 #: ../Doc/whatsnew/3.5.rst:266
 msgid "PEP written and implemented by Yury Selivanov."
-msgstr ""
+msgstr "PEP escrito e implementado por Yury Selivanov."
 
 #: ../Doc/whatsnew/3.5.rst:272
 msgid "PEP 465 - A dedicated infix operator for matrix multiplication"
 msgstr ""
+"PEP 465 - Un operador infijo dedicado para la multiplicación de matrices"
 
 #: ../Doc/whatsnew/3.5.rst:274
 msgid ""
@@ -377,6 +406,13 @@ msgid ""
 "multiplication.  The semantics of these methods is similar to that of "
 "methods defining other infix arithmetic operators."
 msgstr ""
+":pep:`465` agrega el operador infijo ``@`` para la multiplicación de "
+"matrices. Actualmente, ningún tipo de Python incorporado implementa el nuevo "
+"operador, sin embargo, puede ser implementado al definir :meth:"
+"`__matmul__`, :meth:`__rmatmul__`, y :meth:`__imatmul__` para la "
+"multiplicación de matrices regulares, reflejadas e in situ. La semántica de "
+"estos métodos es similar a la de los métodos que definen otros operadores "
+"infijos aritméticos."
 
 #: ../Doc/whatsnew/3.5.rst:281
 msgid ""
@@ -384,26 +420,31 @@ msgid ""
 "mathematics, science, engineering, and the addition of ``@`` allows writing "
 "cleaner code::"
 msgstr ""
+"La multiplicación de matrices es una operación notablemente común en muchos "
+"campos de las matemáticas, la ciencia, la ingeniería, y la adición de ``@`` "
+"permite escribir código más limpio::"
 
 #: ../Doc/whatsnew/3.5.rst:287
 msgid "instead of::"
-msgstr ""
+msgstr "en lugar de::"
 
 #: ../Doc/whatsnew/3.5.rst:292
 msgid "NumPy 1.10 has support for the new operator::"
-msgstr ""
+msgstr "NumPy 1.10 tiene soporte para el nuevo operador::"
 
 #: ../Doc/whatsnew/3.5.rst:312
 msgid ":pep:`465` -- A dedicated infix operator for matrix multiplication"
 msgstr ""
+":pep:`465` -- Un operador infijo dedicado para la multiplicación de matrices"
 
 #: ../Doc/whatsnew/3.5.rst:313
 msgid "PEP written by Nathaniel J. Smith; implemented by Benjamin Peterson."
 msgstr ""
+"PEP escrito por Nathaniel J. Smith; implementado por Benjamin Peterson."
 
 #: ../Doc/whatsnew/3.5.rst:319
 msgid "PEP 448 - Additional Unpacking Generalizations"
-msgstr ""
+msgstr "PEP 448 - Generalizaciones de desembalaje adicionales"
 
 #: ../Doc/whatsnew/3.5.rst:321
 msgid ""
@@ -411,32 +452,43 @@ msgid ""
 "and ``**`` dictionary unpacking operator.  It is now possible to use an "
 "arbitrary number of unpackings in :ref:`function calls <calls>`::"
 msgstr ""
+":pep:`448` extiende los usos permitidos del operador de desembalaje iterable "
+"``*`` y del operador de desembalaje del diccionario ``**``. Ahora es posible "
+"utilizar un número arbitrario de desembalajes en :ref:`llamadas a funciones "
+"<calls>`::"
 
 #: ../Doc/whatsnew/3.5.rst:335
 msgid ""
 "Similarly, tuple, list, set, and dictionary displays allow multiple "
 "unpackings (see :ref:`exprlists` and :ref:`dict`)::"
 msgstr ""
+"De manera similar, las pantallas de tupla, lista, conjunto y diccionario "
+"permiten desembalajes múltiples (consultar :ref:`exprlists` and :ref:"
+"`dict`)::"
 
 #: ../Doc/whatsnew/3.5.rst:353
 msgid ":pep:`448` -- Additional Unpacking Generalizations"
-msgstr ""
+msgstr ":pep:`448` -- Generalizaciones de desembalaje adicionales"
 
 #: ../Doc/whatsnew/3.5.rst:353
 msgid ""
 "PEP written by Joshua Landau; implemented by Neil Girdhar, Thomas Wouters, "
 "and Joshua Landau."
 msgstr ""
+"PEP escrito por Joshua Landau; implementado por Neil Girdhar, Thomas Wouters "
+"y Joshua Landau."
 
 #: ../Doc/whatsnew/3.5.rst:360
 msgid "PEP 461 - percent formatting support for bytes and bytearray"
-msgstr ""
+msgstr "PEP 461 - soporte de formateo porcentual para bytes y bytearray"
 
 #: ../Doc/whatsnew/3.5.rst:362
 msgid ""
 ":pep:`461` adds support for the ``%`` :ref:`interpolation operator <bytes-"
 "formatting>` to :class:`bytes` and :class:`bytearray`."
 msgstr ""
+":pep:`461` agrega soporte para el :ref:`operador de interpolación <bytes-"
+"formatting>` ``%`` a :class:`bytes` y :class:`bytearray`."
 
 #: ../Doc/whatsnew/3.5.rst:366
 msgid ""
@@ -447,42 +499,59 @@ msgid ""
 "dealing with wire format protocols, which are often a mixture of binary and "
 "ASCII compatible text."
 msgstr ""
+"Si bien la interpolación generalmente se considera una operación de cadena "
+"de caracteres, hay casos donde la interpolación en ``bytes`` o "
+"``bytearrays`` tiene sentido y el trabajo necesario para compensar esta "
+"funcionalidad faltante resta valor a la legibilidad general del código. Este "
+"problema es particularmente importante cuando se trata con protocolos de "
+"formato de cable, que a menudo son una mezcla de texto compatible binario y "
+"ASCII."
 
 #: ../Doc/whatsnew/3.5.rst:373 ../Doc/whatsnew/3.5.rst:1848
 msgid "Examples::"
-msgstr ""
+msgstr "Ejemplos::"
 
 #: ../Doc/whatsnew/3.5.rst:381
 msgid ""
 "Unicode is not allowed for ``%b``, but it is accepted by ``%a`` (equivalent "
 "of ``repr(obj).encode('ascii', 'backslashreplace')``)::"
 msgstr ""
+"Unicode no está permitido para ``%b``, pero es aceptado por ``%a`` "
+"(equivalente a ``repr(obj).encode('ascii', 'backslashreplace')``)::"
 
 #: ../Doc/whatsnew/3.5.rst:392
 msgid ""
 "Note that ``%s`` and ``%r`` conversion types, although supported, should "
 "only be used in codebases that need compatibility with Python 2."
 msgstr ""
+"Ten en cuenta que los tipos de conversión ``%s`` y ``%r``, aunque son "
+"compatibles, solo deben usarse en bases de código que necesiten "
+"compatibilidad con Python 2."
 
 #: ../Doc/whatsnew/3.5.rst:398
 msgid ":pep:`461` -- Adding % formatting to bytes and bytearray"
-msgstr ""
+msgstr ":pep:`461` -- Agrega formato ``%`` a bytes y bytearray"
 
 #: ../Doc/whatsnew/3.5.rst:398
 msgid ""
 "PEP written by Ethan Furman; implemented by Neil Schemenauer and Ethan "
 "Furman."
 msgstr ""
+"PEP escrito por Ethan Furman; implementado por Neil Schemenauer y Ethan "
+"Furman."
 
 #: ../Doc/whatsnew/3.5.rst:405
 msgid "PEP 484 - Type Hints"
-msgstr ""
+msgstr "PEP 484 - Indicador de tipos"
 
 #: ../Doc/whatsnew/3.5.rst:407
 msgid ""
 "Function annotation syntax has been a Python feature since version 3.0 (:pep:"
 "`3107`), however the semantics of annotations has been left undefined."
 msgstr ""
+"La sintaxis de anotaciones de funciones ha sido una característica de Python "
+"desde la versión 3.0 (:pep:`3107`), sin embargo, la semántica de anotaciones "
+"se ha dejado indefinida."
 
 #: ../Doc/whatsnew/3.5.rst:410
 msgid ""
@@ -491,6 +560,11 @@ msgid ""
 "evident that it would be beneficial for Python users, if the standard "
 "library included the base definitions and tools for type annotations."
 msgstr ""
+"La experiencia ha mostrado que la mayoría de los usos de las anotaciones de "
+"funciones eran para proporcionar el indicador de tipos para los parámetros "
+"de función y los valores de retorno. Se hizo evidente que sería beneficioso "
+"para los usuarios de Python, si la biblioteca estándar incluyera las "
+"definiciones y las herramientas base para las anotaciones de tipo."
 
 #: ../Doc/whatsnew/3.5.rst:415
 msgid ""
@@ -498,12 +572,17 @@ msgid ""
 "provide these standard definitions and tools, along with some conventions "
 "for situations where annotations are not available."
 msgstr ""
+":pep:`484` introduce un :term:`módulo provisional <provisional api>` para "
+"proporcionar estas definiciones y herramientas estándar, junto con algunas "
+"convenciones para situaciones en la que las anotaciones no están disponibles."
 
 #: ../Doc/whatsnew/3.5.rst:419
 msgid ""
 "For example, here is a simple function whose argument and return type are "
 "declared in the annotations::"
 msgstr ""
+"Por ejemplo, aquí hay una función simple cuyo argumento y tipo de retorno "
+"son declaradas en las anotaciones::"
 
 #: ../Doc/whatsnew/3.5.rst:425
 msgid ""
@@ -513,6 +592,12 @@ msgid ""
 "g. `mypy <http://mypy-lang.org>`_) will be used for on-demand source code "
 "analysis."
 msgstr ""
+"Si bien estas anotaciones están disponibles en tiempo de ejecución a través "
+"del atributo habitual :attr:`__annotations__`, *no se realiza ninguna "
+"verificación de tipos automática en tiempo de ejecución*. En su lugar, se "
+"asume que se utilizará un verificador de tipos fuera de línea independiente "
+"(p. ej. `mypy <http://mypy-lang.org>`_) para el análisis de código fuente "
+"bajo demanda."
 
 #: ../Doc/whatsnew/3.5.rst:431
 msgid ""
@@ -520,33 +605,40 @@ msgid ""
 "class:`~typing.Any` which is consistent with (i.e. assignable to and from) "
 "all types."
 msgstr ""
+"El sistema de tipos admite uniones, tipos genéricos y un tipo especial "
+"llamado :class:`~typing.Any` el cual es consistente con (esto es asignable "
+"desde y hacia) todos los tipos."
 
 #: ../Doc/whatsnew/3.5.rst:437
 msgid ":mod:`typing` module documentation"
-msgstr ""
+msgstr ":mod:`typing` documentación del módulo"
 
 #: ../Doc/whatsnew/3.5.rst:439
 msgid ":pep:`484` -- Type Hints"
-msgstr ""
+msgstr ":pep:`484` -- Indicador de tipos"
 
 #: ../Doc/whatsnew/3.5.rst:439
 msgid ""
 "PEP written by Guido van Rossum, Jukka Lehtosalo, and Łukasz Langa; "
 "implemented by Guido van Rossum."
 msgstr ""
+"PEP escrito por Guido van Rossum, Jukka Lehtosalo y Łukasz Langa; "
+"implementado por Guido van Rossum."
 
 #: ../Doc/whatsnew/3.5.rst:441
 msgid ":pep:`483` -- The Theory of Type Hints"
-msgstr ""
+msgstr ":pep:`483` -- La teoría del indicador de tipos"
 
 #: ../Doc/whatsnew/3.5.rst:442
 msgid "PEP written by Guido van Rossum"
-msgstr ""
+msgstr "PEP escrito por Guido van Rossum"
 
 #: ../Doc/whatsnew/3.5.rst:448
 msgid ""
 "PEP 471 - os.scandir() function -- a better and faster directory iterator"
 msgstr ""
+"PEP 471 - Función os.scandir() -- un iterador de directorio mejor y más "
+"rápido"
 
 #: ../Doc/whatsnew/3.5.rst:450
 msgid ""
@@ -557,6 +649,12 @@ msgid ""
 "reducing the number of calls to :func:`os.stat` required to walk a directory "
 "tree."
 msgstr ""
+":pep:`471` agrega una nueva función de iteración de directorio, :func:`os."
+"scandir`, a la biblioteca estándar. Adicionalmente, ahora :func:`os.walk` es "
+"implementada utilizando ``scandir``, lo que lo hace de 3 a 5 veces más "
+"rápido en sistemas POSIX y de 7 a 20 veces más rápido en sistemas Windows. "
+"Esto se logra en gran medida al reducir enormemente el número de llamadas "
+"necesarias de :func:`os.stat` para recorrer un árbol de directorios."
 
 #: ../Doc/whatsnew/3.5.rst:457
 msgid ""
@@ -564,6 +662,9 @@ msgid ""
 "list of file names, which improves memory efficiency when iterating over "
 "very large directories."
 msgstr ""
+"También ``scandir`` retorna un iterador, en lugar de retornar una lista de "
+"nombres de archivos, lo que mejora la eficiencia de la memoria cuando se "
+"itera sobre directorios muy grandes."
 
 #: ../Doc/whatsnew/3.5.rst:461
 msgid ""
@@ -572,16 +673,23 @@ msgid ""
 "with ``'.'``. The :meth:`entry.is_file() <os.DirEntry.is_file>` call will "
 "generally not make an additional system call::"
 msgstr ""
+"El siguiente ejemplo presenta un uso simple de :func:`os.scandir` para "
+"mostrar todos los archivos (excluyendo directorios) en el *path* dado que no "
+"comienzan con ``'.'``. La llamada a :meth:`entry.is_file() <os.DirEntry."
+"is_file>` generalmente no hará una llamada adicional al sistema::"
 
 #: ../Doc/whatsnew/3.5.rst:472
 msgid ""
 ":pep:`471` -- os.scandir() function -- a better and faster directory iterator"
 msgstr ""
+":pep:`471` -- Función os.scandir() -- un iterador de directorio mejor y más "
+"rápido"
 
 #: ../Doc/whatsnew/3.5.rst:473
 msgid ""
 "PEP written and implemented by Ben Hoyt with the help of Victor Stinner."
 msgstr ""
+"PEP escrito e implementado por Ben Hoyt con la ayuda de Victor Stinner."
 
 #: ../Doc/whatsnew/3.5.rst:479
 msgid "PEP 475: Retry system calls failing with EINTR"
