--- a/distutils/uploading.po
+++ b/distutils/uploading.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-11-27 23:27-0300\n"
+"PO-Revision-Date: 2020-12-06 20:23-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,8 +28,8 @@ msgstr "Subir paquetes al índice de paquetes"
 
 #: ../Doc/distutils/uploading.rst:7
 msgid ""
-"References to up to date PyPI documentation can be found at :ref:"
-"`publishing-python-packages`."
+"References to up to date PyPI documentation can be found at :ref:`publishing-"
+"python-packages`."
 msgstr ""
-"Referencias a la documentación actualizada de PyPI pueden "
-"encontrarse en :ref:`publishing-python-packages`."
+"Referencias a la documentación actualizada de PyPI pueden encontrarse en :"
+"ref:`publishing-python-packages`."
