--- a/distutils/_setuptools_disclaimer.po
+++ b/distutils/_setuptools_disclaimer.po
@@ -26,7 +26,7 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
-"Este documento se conserva solamente hasta que la documentación de "
+"Este documento se conserva únicamente hasta que la documentación de "
 "``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
 "html cubra de forma independiente toda la información relevante incluida "
 "actualmente aquí."
