Cambiada la traducción a pasiva refleja

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2020-12-05 10:28-0600\n"
+"PO-Revision-Date: 2020-12-09 18:20-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgid ""
 "docs.python.org/3.5/whatsnew/changelog.html>`_ for a full list of changes."
 msgstr ""
 "Este artículo explica las nuevas características de Python 3.5, en "
-"comparación con 3.4. Python 3.5 fue publicada el 13 de septiembre de 2015. "
+"comparación con 3.4. Python 3.5 se publicó el 13 de septiembre de 2015. "
 "Consultar el `registro de cambios <https://docs.python.org/3.5/whatsnew/"
 "changelog.html>`_ para una lista completa de cambios."
 
@@ -282,7 +282,8 @@ msgid ""
 msgstr ""
 "Por favor sigue leyendo para obtener una lista completa de los cambios que "
 "se enfrentan los usuarios, incluidas muchas otras mejoras menores, "
-"optimizaciones de CPython, deprecations y posibles problemas de portabilidad."
+"optimizaciones de CPython, deprecaciones y posibles problemas de "
+"portabilidad."
 
 #: ../Doc/whatsnew/3.5.rst:163
 msgid "New Features"
@@ -310,8 +311,8 @@ msgstr ""
 msgid ""
 "Coroutine functions are declared using the new :keyword:`async def` syntax::"
 msgstr ""
-"Las funciones corrutina son declaradas usando la nueva sintaxis :keyword:"
-"`async def`::"
+"Las funciones corrutina se declaran usando la nueva sintaxis :keyword:`async "
+"def`::"
 
 #: ../Doc/whatsnew/3.5.rst:181
 msgid ""
@@ -581,8 +582,8 @@ msgid ""
 "For example, here is a simple function whose argument and return type are "
 "declared in the annotations::"
 msgstr ""
-"Por ejemplo, aquí hay una función simple cuyo argumento y tipo de retorno "
-"son declaradas en las anotaciones::"
+"Por ejemplo, aquí hay una función simple cuyo argumento y tipo de retorno se "
+"declaran en las anotaciones::"
 
 #: ../Doc/whatsnew/3.5.rst:425
 msgid ""
@@ -650,11 +651,11 @@ msgid ""
 "tree."
 msgstr ""
 ":pep:`471` agrega una nueva función de iteración de directorio, :func:`os."
-"scandir`, a la biblioteca estándar. Adicionalmente, ahora :func:`os.walk` es "
-"implementada utilizando ``scandir``, lo que lo hace de 3 a 5 veces más "
-"rápido en sistemas POSIX y de 7 a 20 veces más rápido en sistemas Windows. "
-"Esto se logra en gran medida al reducir enormemente el número de llamadas "
-"necesarias de :func:`os.stat` para recorrer un árbol de directorios."
+"scandir`, a la biblioteca estándar. Adicionalmente, ahora :func:`os.walk` se "
+"implementa utilizando ``scandir``, lo que lo hace de 3 a 5 veces más rápido "
+"en sistemas POSIX y de 7 a 20 veces más rápido en sistemas Windows. Esto se "
+"logra en gran medida al reducir enormemente el número de llamadas necesarias "
+"de :func:`os.stat` para recorrer un árbol de directorios."
 
 #: ../Doc/whatsnew/3.5.rst:457
 msgid ""
